# ros_darwin

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: darwin_gazebo.pc
devel/lib/python2.7/dist-packages/darwin_def_pkg/: __init__.py
devel/share/darwin_gazebo/cmake/: darwin_gazeboConfig.cmake
src/: README.md
src/darwin_control/: CMakeLists.txt  README.md  package.xml
src/darwin_control/config/: darwin_control.yaml
src/darwin_control/launch/: darwin_control.launch
src/darwin_description/: CMakeLists.txt  package.xml
src/darwin_description/urdf/: README.md  darwin.urdf  mydarwin.urdf
src/darwin_gazebo/: CMakeLists.txt  setup.py
src/darwin_gazebo/launch/: darwin_gazebo.launch
src/darwin_gazebo/scripts/: walker.py  walker_demo.py
src/darwin_gazebo/src/darwin_def_pkg/: darwin_def.py
