<?xml version="1.0"?>
<package format="2">
  <name>darwin_control</name>
  <version>1.0.0</version>
  <description>The darwin_control package</description>
  <maintainer email="pc@humarobotics.com">Philippe Capdepuy</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/darwin_control</url>
  <author email="pc@humarobotics.com">Philippe Capdepuy</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
